/*
 * (C) Copyright 2021 Larry Milne (https://www.larrycloud.ca)
 *
 * This code is distributed on "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * @author: qawse3dr a.k.a Larry Milne
 */

#ifndef _COMMON_INCLUDE_RMS_COMMON_UTIL_H_
#define _COMMON_INCLUDE_RMS_COMMON_UTIL_H_

#include <vector>

namespace rms {
namespace common {

long getTimestamp();

}  // namespace common
}  // namespace rms

#endif  //_COMMON_INCLUDE_RMS_COMMON_UTIL_H_